# wgpu-test

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: build.yml
assets/: shader.wgsl
src/: camera.rs  gui.rs  input.rs  instance.rs  lib.rs  main.rs  model.rs  resources.rs  shader.wgsl  texture.rs
src/common/: application.rs  application_handler.rs  camera.rs  context.rs  gui.rs  input.rs  instance.rs  mod.rs  model.rs  pipeline.rs  render.rs  resources.rs  texture.rs  time.rs
