[package]
name = "shooter-game"
version = "0.1.0"
edition = "2021"

[dependencies]
bytemuck = { version = "1.13.1", features = ["derive"] }
cfg-if = "1.0.0"
cgmath = "0.18.0"
egui = "0.22.0"
egui-wgpu = { version = "0.22.0", features = ["winit"] }
egui_demo_lib = "0.22.0"
egui_wgpu_backend = "0.25.0"
egui_winit_platform = { version = "0.19.0", features = ["webbrowser", "clipboard"] }
epi = "0.17.0"
instant = "0.1"
log = "0.4.20"
once_cell = "1.18.0"
pollster = "0.3.0"
tobj = { version = "4.0.0", features = ["async", "log"] }
wasm-bindgen-futures = "0.4.37"
wgpu = "0.17.0"
winit = "0.28.6"
winit_input_helper = "0.14.1"
color-eyre = "0.6"
fern = { version = "0.6.2", features = ["chrono", "colored"] }
chrono = "0.4"
rustc-hash = "1.1.0"

[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg"]

# [profile.release]
# debug = true

[[bin]]
name = "game"
src = "src/bin/game.rs"

[[bin]]
name = "editor"
src = "src/editor/editor.rs"

[build-dependencies]
color-eyre = "0.6"
fs_extra = "1.2"
glob = "0.3"
